// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DatePicker /> should render snapshot correctly 1`] = `
<div
  class="sc-iCfMLu FBMMr"
  role="button"
  tabindex="0"
>
  <div
    class="sc-gsDKAQ kdpXcC"
  >
    <input
      class="sc-dkPtRN ienhoA"
      placeholder="06/01/2022"
      type="text"
      value=""
    />
    <button
      class="sc-eCImPb jWvkiQ"
      type="button"
    >
      <div
        class="sc-bdvvtL bYGNWJ icon-right"
        data-icon-name="calendar"
      >
        <div>
          mock svg
        </div>
      </div>
    </button>
  </div>
</div>
`;

exports[`<RangeDatePicker /> should render snapshot correctly 1`] = `
<div
  class="sc-furwcr icMTJl"
  role="button"
  tabindex="0"
>
  <div
    class="sc-pVTFL dkprSP"
  >
    <div
      class="sc-gsDKAQ kdpXcC"
    >
      <input
        class="sc-dkPtRN ienhoA"
        placeholder="DD/MM/AAAA"
        type="text"
        value=""
      />
      <button
        class="sc-eCImPb jWvkiQ"
        type="button"
      >
        <div
          class="sc-bdvvtL bYGNWJ icon-right"
          data-icon-name="calendar"
        >
          <div>
            mock svg
          </div>
        </div>
      </button>
    </div>
    <span
      class="sc-jrQzAO hXYxfY"
    >
      <div
        class="sc-bdvvtL bYGNWJ"
        data-icon-name="longArrowRight"
      >
        <div>
          mock svg
        </div>
      </div>
    </span>
    <div
      class="sc-gsDKAQ kdpXcC"
    >
      <input
        class="sc-dkPtRN ienhoA"
        placeholder="DD/MM/AAAA"
        type="text"
        value=""
      />
      <button
        class="sc-eCImPb jWvkiQ"
        type="button"
      >
        <div
          class="sc-bdvvtL bYGNWJ icon-right"
          data-icon-name="calendar"
        >
          <div>
            mock svg
          </div>
        </div>
      </button>
    </div>
  </div>
</div>
`;
